syntax = "proto3";

package monitoring_analytics;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/fynnwu/FinancialTrading/go-api/monitoring-analytics;monitoring_analytics";

// 监控分析服务，负责收集系统指标、追踪性能及健康度检测。
service MonitoringAnalyticsService {
  // 上报系统运行指标数据。
  rpc RecordMetric(RecordMetricRequest) returns (RecordMetricResponse);

  // 查询历史监控指标时间序列。
  rpc GetMetrics(GetMetricsRequest) returns (GetMetricsResponse);

  // 轮询或获取各微服务的健康存活状态。
  rpc GetSystemHealth(GetSystemHealthRequest) returns (GetSystemHealthResponse);
}

// 监控指标。
message Metric {
  // 指标 Key（如 cpu_usage）。
  string name = 1;
  // 数值。
  double value = 2;
  // 维度标签集。
  map<string, string> tags = 3;
  // 采集时间戳。
  google.protobuf.Timestamp timestamp = 4;
}

// 系统健康状态详情。
message SystemHealth {
  // 节点/服务名。
  string service_name = 1;
  // 存活状态。
  string status = 2;
  // 异常消息。
  string message = 3;
  // 最后自检时间。
  google.protobuf.Timestamp last_checked = 4;
}

// 指标录入请求。
message RecordMetricRequest {
  // 待上报数据。
  Metric metric = 1;
}

// 录入结果回执。
message RecordMetricResponse {
  // 是否成功。
  bool success = 1;
}

// 历史指标请求。
message GetMetricsRequest {
  // 指标名称。
  string name = 1;
  // 开始时间。
  google.protobuf.Timestamp start_time = 2;
  // 结束时间。
  google.protobuf.Timestamp end_time = 3;
}

// 历史指标响应。
message GetMetricsResponse {
  // 数据序列。
  repeated Metric metrics = 1;
}

// 健康检查请求。
message GetSystemHealthRequest {
  // 可选的服务名过滤。
  string service_name = 1;
}

// 健康检查列表响应。
message GetSystemHealthResponse {
  // 各节点健康状态序列。
  repeated SystemHealth health_statuses = 1;
}
