syntax = "proto3";

package monitoringanalytics.v1;

import "google/protobuf/timestamp.proto";
import "monitoringanalytics/v1/error_reason.proto";

option go_package = "github.com/wyfcoding/financialtrading/go-api/monitoringanalytics/v1;v1";

service MonitoringAnalytics {
  // Get aggregated metrics for a symbol
  rpc GetMetrics(GetMetricsRequest) returns (GetMetricsResponse) {};
  
  // Get recent system alerts
  rpc GetAlerts(GetAlertsRequest) returns (GetAlertsResponse) {};
}

message GetMetricsRequest {
  string symbol = 1;         // Optional, empty for system-wide
  string time_range = 2;     // e.g. "1h", "24h"
}

message MetricPoint {
  google.protobuf.Timestamp timestamp = 1;
  double volume = 2;
  double trade_count = 3;
  double average_price = 4;
}

message GetMetricsResponse {
  repeated MetricPoint points = 1;
}

message GetAlertsRequest {
  int32 limit = 1;
}

message Alert {
  string id = 1;
  string severity = 2; // INFO, WARN, CRITICAL
  string message = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message GetAlertsResponse {
  repeated Alert alerts = 1;
}
